--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!DOCTYPE html>
     <html lang="en">
       <head>
-        <title>snake</title>
+        <title>Game Of Life</title>
         <script type="module">
           document.body.innerHTML = `<canvas id="canvas"
             width="256" height="256" style="background: black;">`;
