--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>hudriwudri</title>
+    <title>Game of Life</title>
   </head>
   <body>
    <canvas id="canvas"
